// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";

package com.akkaseverless.samples;

option java_outer_classname = "ServiceApi";

message MovePiece {
    string board_id = 1 [(akkaserverless.field).entity_key = true];
    string movement = 2;
}

message LoadFromFen {
    string board_id = 1 [(akkaserverless.field).entity_key = true];
    string fenText = 2;
}

message GetBoard {
    string board_id = 1 [(akkaserverless.field).entity_key = true];
}

message Board {
    string fenText = 1;
    bool checkmated = 2;
}


service ChessGameService {
    option (akkaserverless.service).entity.type = ".ChessGame";

    rpc Move(MovePiece) returns (google.protobuf.Empty);
    rpc Get(GetBoard) returns (Board);
}
