syntax = "proto3";

package com.akkaseverless.samples;

import "akkaserverless/annotations.proto";
option java_outer_classname = "Domain";

option (akkaserverless.file).event_sourced_entity = {
    name: "ChessGame"
    entity_type: "ChessGame"
    state: { type: "ChessGame" }
    event: { type: "Moved" }
    event: { type: "BoardLoaded" }
};

message ChessGame {
    string fenText = 1;
}

message Moved {
    string entity_id = 1 [(akkaserverless.field).entity_key = true];
    string movement = 2;
}

message BoardLoaded {
    string entity_id = 1 [(akkaserverless.field).entity_key = true];
    string fenText = 2;
}